upd static file server

--- a/views/layout.html
+++ b/views/layout.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>install - koaloha</title>
+    <link rel="stylesheet" href="css/normalize.css">
     <style>
       .container {
         width: 980px;
