--- a/client/src/assets/stylus/reset.styl
+++ b/client/src/assets/stylus/reset.styl
@@ -1,2 +1,9 @@
 html, body
   height 100%
+  
+a
+  color #4078c0
+  text-decoration none
+  background-color transparent
+  &:hover
+    text-decoration underline
